# C_Huffman

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
app/: CMakeLists.txt
app/include/: huffman.h
app/include/common/: coding_tree.h  common.h  constants.h  crc.h  procedures.h  structures.h
app/include/compress/: code_table.h  compress.h  info_model.h
app/include/decompress/: decompress.h
app/src/: huffman.c
app/src/common/: common.c  procedures.c
app/src/common/coding_tree/: coding_tree.c
app/src/common/crc/: crc.c
app/src/compress/: compress.c
app/src/compress/code_table/: code_table.c
app/src/compress/info_model/: info_model.c  info_src_model.c
app/src/decompress/: decompress.c
include/: code_table.h  coding_tree.h  compress.h  constants.h  crc.h  decompress.h  huffman.h  info_src_model.h  procedures.h
lib/: CMakeLists.txt
scripts/: binread.py  data_compress.bat  data_compress.sh  data_decompress.sh
src/: compress.c  crc.c  decompress.c  huffman.c  procedures.c
src/common/coding_tree/: coding_tree.c
src/compress/code_table/: code_table.c
src/compress/info_model/: info_src_model.c
tests/: CMakeLists.txt  test_hello_world.cpp  test_main.cpp
